# craftax.cu

./: .gitignore  CITATION.cff  Makefile  NOTICE  README.md  bench.py  bench_main.cu  bench_puffer.py  craftax.c  craftax.cu  craftax.cuh  craftax_classic.c  craftax_classic.cu  craftax_cuda.cu  craftax_ext.cu  craftax_full.c  craftax_full.cu  gen_reference.py  main.cu  main_classic.cu  megakernel.cu  overnight-fable5-results.md  pyproject.toml  reference_data.npz  render_demo.py  render_gif.py  setup.py  trim_for_embed.py  validate.py
experimental/: NCU_ANALYSIS.md  PUFFERLIB_INTEGRATION.md  RESTRUCTURING.md  bench_nn_overlap.py  bench_opt2.py  build_opt.py  compare_bench.py  craftax_opt.cu  craftax_opt2.cu  craftax_opt2.cuh  craftax_opt2_ext.cu  craftax_opt3.cu  craftax_opt3_ext.cu  craftax_opt4.cu  craftax_opt4_ext.cu  craftax_opt5.cu  craftax_opt5.cuh  craftax_opt5_ext.cu  craftax_opt_ext.cu  nsys_driver.py  profile_driver.py  profile_driver_opt2.py  profile_driver_opt4.py  profile_driver_opt5.py
